se agregaron cards de productos y se les dio estilo

--- a/index.html
+++ b/index.html
@@ -15,22 +15,13 @@
 <body>
     <header id="header">
         <nav id="navbar">
-            <!-- se agrega nav con JS -->
+            <!-- se agrega nav -->
         </nav>
     </header>
     <main>
-        <section class="card-container">
-            <div class="card">
-                <img src="./css/assets/img/cuerdas/cuerdas.webp" alt="Cuerdas de Bajo">
-                <div class="card-content">
-                    <h3>Cuerdas de Bajo</h3>
-                    <p>Descripción breve de las cuerdas de bajo, ideales para músicos profesionales.</p>
-                    <div class="price-buy">
-                        <span class="price">$25.00</span>
-                        <button class="buy-btn">Añadir al carrito</button>
-                    </div>
-                </div>
-            </div>
+        <section class="card__container">
+        <!-- se agregan los productos -->
+    </tbody>
         </section>
 
         <section class="carrtio__container">
