se modifico la class Tienda,

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         </nav>
     </header>
     <main>
-        <section class="card__container">
+        <section class="card-container">
         <!-- se agregan los productos -->
     </tbody>
         </section>
 
-        <section class="carrtio__container">
-            <h2>Carrito de Compras</h2>
+        <section class="carrito-container">
+            <h2>Mi carrito</h2>
             <table id="carrito" class="carrito">
                 <thead>
                     <tr>
@@ -36,7 +36,7 @@
                         <th class="carrito-header">Eliminar</th>
                     </tr>
                 </thead>
-                <tbody class="carrito-body">
+                <tbody id="carrito-body">
                     <!-- se agregan los productos del carrito -->
                 </tbody>
                 <tfoot class="carrito-footer">
@@ -51,7 +51,7 @@
     </main>
 
     <script src="./js/header.js"></script>
-    <script src="./js/carrito.js"></script>
+    <script src="./js/productos_carrito.js"></script>
 </body>
 
 </html>
