se agregaron productos, se agrego un filtro de busqueda por marca en la nav, y se agregaron librerias para mostrar cuando se agrega un pŕoducto al carrito, y cuanto el producto no tiene suficiente stock, y se le dieron estilos

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link rel="stylesheet" href="./css/sweer_alert_sin_stock.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="./css/carrito.css">
     <link rel="stylesheet" href="./css/productos.css">
     <title>DL Bass-Strings</title>
@@ -20,8 +22,8 @@
     </header>
     <main>
         <section class="card-container">
-        <!-- se agregan los productos -->
-    </tbody>
+            <!-- se agregan los productos -->
+            </tbody>
         </section>
 
         <section class="carrito-container">
@@ -50,6 +52,8 @@
         </section>
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/productos_carrito.js"></script>
 </body>
