se hicieron alguna correciones para dejar el codigo mas limpio

--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
 <body>
     <header id="header">
         <nav id="navbar">
-            <!-- se agrega nav -->
+            <!-- se agrega nav por marca desde JS-->
         </nav>
     </header>
     <main>
         <section class="card-container">
-            <!-- se agregan los productos -->
-            </tbody>
+            <!-- se agregan los productos desde JS-->
         </section>
 
         <section class="carrito-container">
