--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <link rel="stylesheet" href="./css/sweer_alert_sin_stock.css">
+    <link rel="stylesheet" href="./css/sweet_alert_sin_stock.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/carrito.css">
@@ -20,37 +21,46 @@
             <!-- se agrega nav por marca desde JS-->
         </nav>
     </header>
+
     <main>
         <section class="card-container">
             <!-- se agregan los productos desde JS-->
         </section>
-
-        <section class="carrito-container">
-            <h2>Mi carrito</h2>
-            <table id="carrito" class="carrito">
-                <thead>
-                    <tr>
-                        <th class="carrito-header">Producto</th>
-                        <th class="carrito-header">Precio</th>
-                        <th class="carrito-header">Cantidad</th>
-                        <th class="carrito-header">Total</th>
-                        <th class="carrito-header">Eliminar</th>
-                    </tr>
-                </thead>
-                <tbody id="carrito-body">
-                    <!-- se agregan los productos del carrito -->
-                </tbody>
-                <tfoot class="carrito-footer">
-                    <tr>
-                        <td colspan="3" class="carrito-total-label">Total:</td>
-                        <td id="total-carrito" class="carrito-total">$0</td>
-                    </tr>
-                </tfoot>
-            </table>
-            <button class="btn-finalizar">Realizar Compra</button>
-        </section>
     </main>
 
+    <aside>
+        <div class="aside-header">
+            <h3>Mi carrito<i class="bi bi-cart-fill"></i></h3>
+            <button id="btn-close-menu">
+                <i class="bi bi-x-circle close-menu"></i>
+            </button>
+        </div>
+
+        <table id="carrito" class="carrito">
+            <thead>
+                <tr>
+                    <th class="carrito-header">Producto</th>
+                    <th class="carrito-header">Precio</th>
+                    <th class="carrito-header">Cantidad</th>
+                    <th class="carrito-header">Total</th>
+                    <th class="carrito-header">Eliminar</th>
+                </tr>
+            </thead>
+            <tbody id="carrito-body">
+                <!-- se agregan los productos del carrito desde JS -->
+            </tbody>
+            <tfoot class="carrito-footer">
+                <tr>
+                    <td colspan="3" class="carrito-total-label">Total:</td>
+                    <td id="total-carrito" class="carrito-total">$0</td>
+                </tr>
+            </tfoot>
+        </table>
+        <button class="btn-finalizar">Realizar compra</button>
+    </aside>
+
+
+    <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./js/header.js"></script>
