--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <link rel="stylesheet" href="./css/sweet_alert_sin_stock.css">
+    <link rel="stylesheet" href="./css/sweet_alert.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/carrito.css">
@@ -30,7 +29,7 @@
 
     <aside>
         <div class="aside-header">
-            <h3>Mi carrito<i class="bi bi-cart-fill"></i></h3>
+            <h3>Mi carrito<i class="bi bi-cart4"></i></h3>
             <button id="btn-close-menu">
                 <i class="bi bi-x-circle close-menu"></i>
             </button>
@@ -56,7 +55,7 @@
                 </tr>
             </tfoot>
         </table>
-        <button class="btn-finalizar">Realizar compra</button>
+        <button id="btn-comprar" class="btn-comprar">Comprar</button>
     </aside>
 
 
