--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/carrito.css">
     <link rel="stylesheet" href="./css/productos.css">
-    <title>DL Bass-Strings</title>
+    <link rel="stylesheet" href="./css/footer.css">
+    <title>DB-Strings</title>
 </head>
 
 <body>
@@ -58,12 +59,16 @@
         <button id="btn-comprar" class="btn-comprar">Comprar</button>
     </aside>
 
+    <footer id="footer">
+        <!-- se añaden categorías desde JS -->
+    </footer>
 
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/productos_carrito.js"></script>
+    <script src="./js/footer.js"></script>
 </body>
 
 </html>
