--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="./css/sweet_alert.css">
-    <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/banner_coutas.css">
     <link rel="stylesheet" href="./css/carrito.css">
     <link rel="stylesheet" href="./css/productos.css">
     <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/banner_marcas.css">
     <title>DB-Strings</title>
 </head>
 
@@ -23,6 +25,9 @@
     </header>
 
     <main>
+        <div id="banner_cuotas">
+            <!-- se agrega el banner desde JS -->
+        </div>
         <section class="card-container">
             <!-- se agregan los productos desde JS-->
         </section>
@@ -59,6 +64,12 @@
         <button id="btn-comprar" class="btn-comprar">Comprar</button>
     </aside>
 
+    <div class="banner">
+        <div class="slides">
+            <!-- se agregan la imágenes desde JS -->
+        </div>
+    </div>
+
     <footer id="footer">
         <!-- se añaden categorías desde JS -->
     </footer>
@@ -67,6 +78,8 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./js/header.js"></script>
+    <script src="./js/banner_cuotas.js"></script>
+    <script src="./js/banner_marcas.js"></script>
     <script src="./js/productos_carrito.js"></script>
     <script src="./js/footer.js"></script>
 </body>
