se agrego un boton para volver a mostrar todos los productos

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="./css/sweet_alert.css">
     <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/banner_coutas.css">
+    <link rel="stylesheet" href="./css/banner_cuotas.css">
     <link rel="stylesheet" href="./css/carrito.css">
     <link rel="stylesheet" href="./css/productos.css">
-    <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/banner_marcas.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <title>DB-Strings</title>
 </head>
 
@@ -28,9 +28,13 @@
         <div id="banner_cuotas">
             <!-- se agrega el banner desde JS -->
         </div>
-        <section class="card-container">
+        <section id="card-container" class="card-container">
             <!-- se agregan los productos desde JS-->
         </section>
+        <div id="btn-mostrar-todos">
+            <!-- se crea el botón desde JS -->
+        </div>
+
     </main>
 
     <aside>
@@ -79,8 +83,8 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/banner_cuotas.js"></script>
-    <script src="./js/banner_marcas.js"></script>
     <script src="./js/productos_carrito.js"></script>
+    <script src="./js/banner_marcas.js"></script>
     <script src="./js/footer.js"></script>
 </body>
 
